--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -3,7 +3,7 @@
 		"outDir": "./dist",
 		"target": "es2019",
 		"module": "CommonJS",
-		"lib": ["ES2023"],
+		"lib": ["es2019"],
 		"moduleResolution": "node",
 		"resolveJsonModule": true,
 		"allowSyntheticDefaultImports": true,
