--- a/api/package.json
+++ b/api/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "start": "ts-node ./src/server.ts",
     "dev": "nodemon --watch 'src/**/*.ts' --exec ts-node ./src/server.ts",
-    "build": "tsc",
+    "build": "tsc -p ./tsconfig.release.json",
     "test": "echo \"Error: no test specified\" && exit 1",
     "lint": "eslint src/",
     "prettier:write": "prettier --write src"
