Add @typescript-eslint/parser for ESLint

--- a/api/.eslintrc.json
+++ b/api/.eslintrc.json
@@ -4,6 +4,7 @@
     "eslint:recommended",
     "plugin:@typescript-eslint/eslint-recommended",
     "plugin:@typescript-eslint/recommended",
+    "@typescript-eslint/parser",
     "prettier"
   ],
   "plugins": ["@typescript-eslint"],
