Configure import alias in api

--- a/api/tsconfig.json
+++ b/api/tsconfig.json
@@ -23,7 +23,11 @@
     "declaration": true,
     "emitDecoratorMetadata": true,
     "esModuleInterop": true,
-    "removeComments": false
+    "removeComments": false,
+    "baseUrl": ".",
+    "paths": {
+      "@/*": ["src/*"],
+    }
   },
   "include": ["src/**/*"]
 }
