--- a/api/package.json
+++ b/api/package.json
@@ -37,6 +37,7 @@
     "nodemon": "^3.1.7",
     "prettier": "^3.3.3",
     "ts-node": "^10.9.2",
+    "tsconfig-paths": "4.2.0",
     "tslib": "^2.8.1",
     "typescript": "^5.6.3"
   }
